--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title></title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="sMWz0ut7HwkLRBISsmEyn3sLyYB1IVwGs-pfgftnNrI" />
 
 </head>
 
