Login Page Changes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
-
+<title>Please Login to Continue...</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="sMWz0ut7HwkLRBISsmEyn3sLyYB1IVwGs-pfgftnNrI" />
 
