--- a/e4a8fe452bda3514e14d63649577755cf3b626e2/index.html
+++ b/e4a8fe452bda3514e14d63649577755cf3b626e2/index.html
@@ -103,7 +103,7 @@
 		
                 <div class="col-md-8">
                     <p><br><br>
-                        I am an engineer by profession and working in <u><b>Bharat Electronics Limited, Ghaziabad as a DGM in Radar SBU (Strategic Business Unit)</u></b>. I Joined BEL in 2002 after completion of B Tech (EC 2002) from IET Lucknow.  I worked as Radar System Integration and Product Assurance Engineer and carried out many Installation and Commissioning of ground based radars for Army/Air Force and  ship borne radars ( Navy). Besides my professional work, I spent my time reading books (Spiritual & Technology). My favourite books are Bhagwat Geeta, Cosmos (Carl Sagan), The Dragone of Edenen (Carl Sagan) and The Invention that changed the world (Robert Buderi).
+                        I AM an engineer by profession and working in <u><b>Bharat Electronics Limited, Ghaziabad as a DGM in Radar SBU (Strategic Business Unit)</u></b>. I Joined BEL in 2002 after completion of B Tech (EC 2002) from IET Lucknow.  I worked as Radar System Integration and Product Assurance Engineer and carried out many Installation and Commissioning of ground based radars for Army/Air Force and  ship borne radars ( Navy). Besides my professional work, I spent my time reading books (Spiritual & Technology). My favourite books are Bhagwat Geeta, Cosmos (Carl Sagan), The Dragone of Edenen (Carl Sagan) and The Invention that changed the world (Robert Buderi).
                     </p>
                 </div>
             </div>
